--- a/Example Modul.ipynb
+++ b/Example Modul.ipynb
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 3 = 13\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 3\n",
@@ -60,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 - 3 = 7\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Pengurangan (-)\n",
     "hasil = a - b\n",
@@ -82,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 / 3 = 3.3333333333333335\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Pembagian (/)\n",
     "hasil = a / b\n",
@@ -93,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 ** 3 = 1000\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Eksponen atau Pangkat (**)\n",
     "hasil = a ** b\n",
@@ -104,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 % 3 = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Modulus (%)\n",
     "hasil = a % b\n",
@@ -115,9 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 // 3 = 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Floor Division (//)\n",
     "hasil = a // b\n",
@@ -146,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 ** 2 * 4 + 3 / 2 - 2 % 4 // 3 = 31.5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "y = 2\n",
@@ -160,9 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 2 * 4 = 11\n",
+      "( 3 + 2 ) * 4 = 20\n"
+     ]
+    }
+   ],
    "source": [
     "hasil = x + y * z\n",
     "print(x,'+',y,'*',z,'=',hasil)\n",
@@ -198,9 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 > 3 = True\n",
+      "2 > 3 = False\n",
+      "2 > 2 = False\n"
+     ]
+    }
+   ],
    "source": [
     "a = 4\n",
     "b = 2\n",
@@ -218,9 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 < 3 = False\n",
+      "2 < 3 = True\n",
+      "2 < 2 = False\n"
+     ]
+    }
+   ],
    "source": [
     "# Kurang dari (<)\n",
     "hasil = a < 3\n",
@@ -235,9 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 >= 3 = True\n",
+      "2 >= 3 = False\n",
+      "2 >= 2 = True\n"
+     ]
+    }
+   ],
    "source": [
     "# Lebih dari sama dengan (>=)\n",
     "hasil = a >= 3\n",
@@ -252,9 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 <= 3 = False\n",
+      "2 <= 3 = True\n",
+      "2 <= 2 = True\n"
+     ]
+    }
+   ],
    "source": [
     "# Kurang dari sama dengan (<=)\n",
     "hasil = a <= 3\n",
@@ -269,9 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 == 4 = True\n",
+      "2 == 4 = False\n"
+     ]
+    }
+   ],
    "source": [
     "# Sama dengan (==)\n",
     "hasil = a == 4\n",
@@ -293,9 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 == 4 = False\n",
+      "2 == 4 = False\n"
+     ]
+    }
+   ],
    "source": [
     "hasil = a == '4'\n",
     "print(a,'==',4,'=',hasil)\n",
@@ -306,9 +429,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 != 4 = False\n",
+      "2 != 4 = True\n"
+     ]
+    }
+   ],
    "source": [
     "# Tidak sama dengan (!=)\n",
     "hasil = a != 4\n",
@@ -1268,7 +1400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
